# eph-mapf

./: .gitignore  EPH.ipynb  LICENSE  README.md  buffer.py  config.py  datagen.py  environment.py  index.html  pyproject.toml  quickstart.ipynb  requirements.txt  test.py  train.py  utils.py  validate.py  worker.py
configs/: dcc.py  eph-base.py  eph-sacha.py  eph.py
configs/common/: __init__.py  dqn.py  env.py  test.py  val.py
src/: buffer.py  config.py  environment.py  worker.py
src/data/: README.md  config.yaml  generate_data.py  generate_data_random_maps.py  utils.py
src/models/: dcc.py  eph.py
src/models/nn/: rezero.py  scrimp.py
src/od_mstar3/: SortedCollection.py  col_set_addition.py  interface.py  od_mstar.py  prune_graph.py  setup.py  workspace_graph.py
src/utils/: plot.py  utils.py  video.py
static/css/: code.css  index.css
test_set/: 40length_16agents_0.3density.pth  40length_32agents_0.3density.pth  40length_4agents_0.3density.pth  40length_64agents_0.3density.pth  40length_8agents_0.3density.pth  den312d_16agents.pth  den312d_32agents.pth  den312d_4agents.pth  den312d_64agents.pth  den312d_8agents.pth  warehouse_16agents.pth  warehouse_32agents.pth  warehouse_4agents.pth  warehouse_64agents.pth  warehouse_8agents.pth
valid_set/: 40length_16agents_0.3density.pth  40length_32agents_0.3density.pth  40length_64agents_0.3density.pth
